# finance-agent

./: .gitignore  AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 006ee057d21a_add_job_execution_logs_table.py  0ca32dcce540_add_stock_tables.py  399664466865_init_db.py  474f9e6e6bcb_add_portfolio_tables.py  67a63c189a64_add_watchlist_tables.py  69b6a843da12_make_email_nullable.py  8dc962565009_add_clerk_fields_to_users.py  9b440fad0622_rename_market_to_exchange_and_add_.py  a1b2c3d4e5f6_add_stock_events_table.py  a3c0755d8ccf_add_users_table.py  e2cb6c6dba55_add_recommendation_tables.py
apps/api/deploy/: Caddyfile  finance-agent-api.service  setup.sh
apps/api/scripts/: backfill_history.py  test_jqdata.py  test_jqdata_news.py  trigger_job.py
apps/api/src/: config.py  database.py  dependencies.py  main.py
apps/api/src/agents/: screener_config.py
apps/api/src/agents/data_agent/: __init__.py  fetcher.py  (+4 more)
apps/api/src/core/: auth.py  config.py  database.py  exceptions.py  job_logger.py  llm.py  middleware.py  scheduler.py
apps/api/src/models/: __init__.py  event.py  job_log.py  portfolio.py  recommendation.py  stock.py  user.py  watchlist.py
apps/api/src/routers/: admin.py  notifications.py  portfolio.py  recommendations.py  users.py  webhooks.py
apps/api/src/schemas/: __init__.py  admin.py  base.py  notification.py  portfolio.py  recommendation.py  user.py
apps/api/src/services/: admin.py  notification.py  portfolio.py  user.py
(+40 files in other folders)
