[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
